--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
-- name: Home
-  link: /
-- name: About
-  link: /about.html
-- name: Blog
-  link: /blog.html
+- title: Posts
+  url: /posts/
+- title: About
+  url: /about/
+- title: Tags
+  url: /tags/
