--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,3 +4,6 @@
 - title: GitHub
   url: https://github.com/OhDavit
   icon: fab fa-github
+- title: LinkedIn
+  url: https://www.linkedin.com/in/davitohanyan/
+  icon: fab fa-linkedin
